# AUV-AIAPAEC

./: README.md
colcon_ws/: README.md
colcon_ws/src/aiapaec_models/: setup.bash
colcon_ws/src/gz_transport_dvl/: CMakeLists.txt
colcon_ws/src/ros_pkg_aplication/ros_pkg_aplication/: control_odometry_data.py  graphics_data.py  test_data.py
colcon_ws/src/ros_pkg_bringup/config/: ros_gz_example_bridge.yaml
colcon_ws/src/ros_pkg_bringup/launch/: aiapaec.launch.py
src/: README.md
src/aiapaec_models/: setup.bash
src/aiapaec_models/models/aiapaec/: model.sdf
src/gz_transport_dvl/: publisher.cc
src/ros_pkg_aplication/: setup.py
src/ros_pkg_aplication/ros_pkg_aplication/: control_sensors_data.py  zig_zag_commands.py
ws/src/aiapaec_models/models/aiapaec/: model.sdf
ws/src/ros_pkg_aplication/: setup.py
ws/src/ros_pkg_aplication/ros_pkg_aplication/: control_odometry_data.py  control_sensors_data.py  example_node.py  graphics_data.py
ws/src/ros_pkg_bringup/launch/: aiapaec.launch.py  odometry.launch.py  open_loop.launch.py  sensor.launch.py  zig_zag.launch.py
